# fastapi-tenant

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  mypy.ini  pyproject.toml  ruff.toml
example/: main.py  models.py  org_models.py
example/migrations/: alembic.ini  env.py
example/migrations-org/: env.py
example/migrations-org/versions/: 0f31e6d36dd4_initial.py
example/migrations-tenant/: env.py  script.py.mako
example/migrations-tenant/versions/: 8c4dd96b620f_initial.py
example/migrations/shared/: ef83406eb146_initial.py
example/migrations/versions/: 503e704dc34d_initial.py
src/fastapi_tenant/: __init__.py  alembic_helpers.py  cli.py  db.py  middleware.py  resolvers.py  settings.py  tenant_context.py
src/fastapi_tenant/alembic/: __init__.py  env.py  shared_env.py  tenant.py  tenant_env.py
src/tests/: conftest.py  test_fastapi_tenant.py
