[project]
name = "fastapi-tenant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic-settings>=2.10.1",
    "sqlalchemy>=2.0.43",
    "starlette>=0.47.2",
]

[dependency-groups]
dev = [
    "mypy>=1.17.1",
    "ruff>=0.12.9",
]
