[project]
name = "fastapi-tenant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.16.4",
    "psycopg[binary]>=3.2.9",
    "pydantic-settings>=2.10.1",
    "sqlalchemy>=2.0.43",
    "starlette>=0.47.2",
    "typer>=0.16.0",
]

[dependency-groups]
dev = [
    "mypy>=1.17.1",
    "ruff>=0.12.9",
]


[project.scripts]
fastapi-tenant = "fastapi_tenant.cli:app"
